# Cutom_Math

./: CMakeLists.txt  README.md  build.bat  main.c  project_structure.txt
customMath/: custom_math.h  math_constants.h
customMath/exponents/: exponents.c  exponents.h
customMath/trigonometery/: trigonometric.c
customMath/utilities/: math_utils.c  math_utils.h
src/: main.c
src/lib/customMath/: custom_math.h  error_handling.h  math_constants.h
src/lib/customMath/array_handling/: sorter.c  sorter.h
src/lib/customMath/array_handling/linked_lists/: single.c  single.h
src/lib/customMath/exponents/: exponents.c  exponents.h
src/lib/customMath/trigonometery/: trigonometric.c  trigonometric.h
src/lib/customMath/utilities/: math_utils.c  math_utils.h
src/lib/customMath/vectors/: vector.c  vector.h
tests/: test_main.c
tests/exponential/: e_x_test.c  exponen_test.h  nat_log_test.c  power_test.c
tests/trigonometery/: cosecant_test.c  cosine_test.c  cotangent_test.c  secant_test.c  sine_test.c  sine_test.h  tangent_test.c  trig_test.h
